# temoto_robot_manager

./: .gitignore  CMakeLists.txt  README.md  package.xml
conf/: robot_description.yaml  robot_description_original.yaml
include/temoto_robot_manager/: custom_datastructures.h  custom_plugin_base.h  custom_plugin_helper.h  navigation_datastructures.h  navigation_plugin_base.h  navigation_plugin_helper.h  rm_datastructures.h  robot.h  robot_common_procedures.h  robot_config.h  robot_features.h  robot_manager.h  robot_manager_interface.h  robot_manager_services.h
msg/: CustomFeedback.msg  CustomRequest.msg  NavigationFeedback.msg
scripts/: urdf_loader.py
src/: custom_plugin_helper.cpp  navigation_plugin_helper.cpp  robot.cpp  robot_common_procedures.cpp  robot_config.cpp  robot_features.cpp  robot_manager.cpp  robot_manager_node.cpp
srv/: CancelNavigationGoal.srv  CustomRequest.srv  CustomRequestPreempt.srv  GripperControl.srv  NavigationGoal.srv  RobotCancelNavigationGoal.srv  RobotExecutePlan.srv  RobotGetConfig.srv  RobotGetNamedTargets.srv  RobotGetTarget.srv  RobotGetVizInfo.srv  RobotGoal.srv  RobotGripperControlPosition.srv  RobotLoad.srv  RobotNavigationGoal.srv  RobotPlan.srv  RobotPlanManipulation.srv  RobotSetMode.srv  RobotSetTarget.srv
