<?xml version="1.0"?>
<package format="2">
  <name>temoto_robot_manager</name>
  <version>0.0.0</version>
  <description>The temoto_robot_manager package</description>
  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>temoto_context_manager</build_depend>
  <build_depend>temoto_core</build_depend>
  <build_depend>temoto_nlp</build_depend>
  <build_depend>temoto_er_manager</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>temoto_context_manager</exec_depend>
  <exec_depend>temoto_core</exec_depend>
  <exec_depend>temoto_nlp</exec_depend>
  <exec_depend>temoto_er_manager</exec_depend>

</package>
