<?xml version="1.0"?>
<package format="2">
  <name>temoto_robot_manager</name>
  <version>0.0.0</version>
  <description>The temoto_robot_manager package</description>
  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>yaml-cpp</depend>
  <depend>temoto_core</depend>
  <depend>temoto_resource_registrar</depend>
  <depend>temoto_process_manager</depend>

</package>
